Fix CORS and backend configuration